Multi-panel synchronised outputs

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -44,13 +44,12 @@
     "    \"\"\"\n",
     "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
     "    gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
-    "    process_times = np.linspace(0.0, times, len(process_req))\n",
-    "    process_vals = np.interp(range(times), process_times, process_req)\n",
+    "    process_vals = np.interp(range(times), np.linspace(0.0, times, len(process_req)), process_req)\n",
     "    incidence = np.zeros(times)\n",
     "    incidence[0] = seed\n",
     "    this_suscept = pop - seed\n",
-    "    suscept = []\n",
-    "    r_t = []\n",
+    "    suscept = [this_suscept]\n",
+    "    r_t = [np.nan]\n",
     "    for t in range(1, times):\n",
     "        \n",
     "        # Update outputs\n",
@@ -112,18 +111,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee3e9319-4d6e-4a69-b965-e495c4910755",
+   "id": "0c0d5b2a-253a-4af1-9056-e60de781a6e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot\n",
     "model_times = pd.Series(model_times)\n",
-    "fig = make_subplots(specs=[[{'secondary_y': True}]])\n",
-    "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'))\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=optimised, name='model'))\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'))\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), secondary_y=True)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'))"
+    "fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
+    "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'), row=1, col=1)\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=optimised, name='model'), row=1, col=1)\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
+    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1).update_layout(height=800)"
    ]
   }
  ],
