Make model time a parameter

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -39,18 +39,18 @@
     "    a = req_mean / scale\n",
     "    return {'a': a, 'scale': scale}\n",
     "\n",
-    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed):\n",
+    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times):\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
     "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "    gen_time_densities = np.diff(gamma.cdf(range(times + 1), **gamma_params))\n",
-    "    process_vals = np.interp(range(times), np.linspace(0.0, times, len(process_req)), process_req)\n",
-    "    incidence = np.zeros(times)\n",
+    "    gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
+    "    process_vals = np.interp(range(n_times), np.linspace(0.0, n_times, len(process_req)), process_req)\n",
+    "    incidence = np.zeros(n_times)\n",
     "    incidence[0] = seed\n",
     "    this_suscept = pop - seed\n",
     "    suscept = [this_suscept]\n",
     "    r_t = [np.nan]\n",
-    "    for t in range(1, times):\n",
+    "    for t in range(1, n_times):\n",
     "        \n",
     "        # Update outputs\n",
     "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible\n",
@@ -64,11 +64,11 @@
     "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
     "    return incidence, suscept, r_t, process_vals\n",
     "\n",
-    "def calib_func(params, pop, seed):    \n",
+    "def calib_func(params, pop, seed, n_times):    \n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = params\n",
-    "    incidence_df, _, _, _ = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed)\n",
+    "    incidence_df, _, _, _ = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)\n",
     "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
   },
@@ -82,8 +82,7 @@
     "# Model parameters\n",
     "population = 100.0\n",
     "infectious_seed = 1.0\n",
-    "times = 40\n",
-    "model_times = range(times)\n",
+    "n_times = 40\n",
     "dummy_data = pd.Series(\n",
     "    {\n",
     "        5: 1.0,\n",
@@ -104,8 +103,8 @@
    "outputs": [],
    "source": [
     "# Optimise and run results through the model\n",
-    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed), bounds=[[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4)\n",
-    "optimised, suscept, r_t, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed)"
+    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times), bounds=[[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4)\n",
+    "optimised, suscept, r_t, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)"
    ]
   },
   {
@@ -116,13 +115,13 @@
    "outputs": [],
    "source": [
     "# Plot\n",
-    "model_times = pd.Series(model_times)\n",
+    "model_times = pd.Series(range(n_times))\n",
     "fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
     "fig.add_trace(go.Scatter(x=dummy_data.index, y=dummy_data, mode='markers', name='targets'), row=1, col=1)\n",
     "fig.add_trace(go.Scatter(x=model_times, y=optimised, name='model'), row=1, col=1)\n",
     "fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
     "fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1).update_layout(height=800)"
+    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1).update_layout(height=800, margin={'t': 20, 'b': 5, 'l': 5, 'r': 5})"
    ]
   }
  ],
