Split semi-mechanistic process out from other parts of model function

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -39,12 +39,7 @@
     "    a = req_mean / scale\n",
     "    return {'a': a, 'scale': scale}\n",
     "\n",
-    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times):\n",
-    "    \"\"\"The semimechanistic process.\n",
-    "    \"\"\"\n",
-    "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "    gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
-    "    process_vals = np.interp(range(n_times), np.linspace(0.0, n_times, len(process_req)), process_req)\n",
+    "def semimech(gen_time_densities, process_vals, pop, seed, n_times):\n",
     "    incidence = np.zeros(n_times)\n",
     "    incidence[0] = seed\n",
     "    this_suscept = pop - seed\n",
@@ -63,6 +58,14 @@
     "        suscept.append(this_suscept)\n",
     "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
     "    return incidence, suscept, r_t, process_vals\n",
+    "\n",
+    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times):\n",
+    "    \"\"\"The semimechanistic process.\n",
+    "    \"\"\"\n",
+    "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
+    "    gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
+    "    process_vals = np.interp(range(n_times), np.linspace(0.0, n_times, len(process_req)), process_req)\n",
+    "    return semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
     "\n",
     "def calib_func(params, pop, seed, n_times):    \n",
     "    \"\"\"Get the loss function from the model.\n",
