--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -40,6 +40,8 @@
     "    return {'a': a, 'scale': scale}\n",
     "\n",
     "def semimech(gen_time_densities, process_vals, pop, seed, n_times):\n",
+    "    \"\"\"The semimechanistic process.\n",
+    "    \"\"\"\n",
     "    incidence = np.zeros(n_times)\n",
     "    incidence[0] = seed\n",
     "    this_suscept = pop - seed\n",
@@ -60,7 +62,7 @@
     "    return incidence, suscept, r_t, process_vals\n",
     "\n",
     "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times):\n",
-    "    \"\"\"The semimechanistic process.\n",
+    "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
     "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
     "    gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
