Add typing to smaller functions

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict\n",
+    "from typing import Dict, List\n",
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,12 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}\n",
-    "\n",
     "def semimech(gen_time_densities, process_vals, pop, seed, n_times):\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
@@ -55,24 +49,42 @@
     "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
     "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
     "\n",
-    "        # Store quantities of interest\n",
+    "        # Track quantities of interest\n",
     "        incidence[t] = this_inc\n",
     "        suscept.append(this_suscept)\n",
     "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
     "    return incidence, suscept, r_t, process_vals\n",
     "\n",
-    "def model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times):\n",
+    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
+    "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
+    "    \"\"\"\n",
+    "    var = req_sd ** 2.0\n",
+    "    scale = var / req_mean\n",
+    "    a = req_mean / scale\n",
+    "    return {'a': a, 'scale': scale}\n",
+    "\n",
+    "def get_gamma_densities_from_params(mean: float, sd: float) -> np.array:\n",
+    "    \"\"\"Get integrals over integer differences in gamma distribution for simulation duration.\n",
+    "    \"\"\"\n",
+    "    params = get_gamma_params_from_mean_sd(mean, sd)\n",
+    "    return np.diff(gamma.cdf(range(n_times + 1), **params))\n",
+    "\n",
+    "def get_interp_vals_over_model_time(req: List[float], n_times: int) -> np.array:\n",
+    "    \"\"\"Linear interpolation at requested values at regular intervals over simulation period.\n",
+    "    \"\"\"\n",
+    "    return np.interp(range(n_times), np.linspace(0.0, n_times, len(req)), req)\n",
+    "\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
-    "    gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
-    "    gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))\n",
-    "    process_vals = np.interp(range(n_times), np.linspace(0.0, n_times, len(process_req)), process_req)\n",
+    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd)\n",
+    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    return semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
     "\n",
-    "def calib_func(params, pop, seed, n_times):    \n",
+    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
-    "    gen_time_mean, gen_time_sd, *process_req = params\n",
+    "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
     "    incidence_df, _, _, _ = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)\n",
     "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
@@ -108,7 +120,8 @@
    "outputs": [],
    "source": [
     "# Optimise and run results through the model\n",
-    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times), bounds=[[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4)\n",
+    "param_bounds = [[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4\n",
+    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times), bounds=param_bounds)\n",
     "optimised, suscept, r_t, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)"
    ]
   },
