Change model return to named tuple

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -29,10 +29,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d71a2ca-aa53-4c92-a14f-a230fa61c61b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t', 'process_vals'])\n",
+    "\n",
     "def semimech(gen_time_densities, process_vals, pop, seed, n_times):\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
@@ -53,7 +65,7 @@
     "        incidence[t] = this_inc\n",
     "        suscept.append(this_suscept)\n",
     "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
-    "    return incidence, suscept, r_t, process_vals\n",
+    "    return Outputs(incidence, suscept, r_t, process_vals)\n",
     "\n",
     "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
     "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
@@ -85,8 +97,8 @@
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "    incidence_df, _, _, _ = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)\n",
-    "    return sum([(incidence_df[t] - d) ** 2 for t, d in dummy_data.items()])"
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0]\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
   },
   {
