Change to named tuple returns

--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "from typing import Dict, List\n",
+    "from collections import namedtuple\n",
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -29,23 +30,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d71a2ca-aa53-4c92-a14f-a230fa61c61b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import namedtuple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d3299a2b-b443-45a8-aa27-a3c90e575b8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t', 'process_vals'])\n",
+    "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t'])\n",
     "\n",
-    "def semimech(gen_time_densities, process_vals, pop, seed, n_times):\n",
+    "def semimech(gen_time_densities, process_vals, pop, seed, n_times) -> Outputs:\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
     "    incidence = np.zeros(n_times)\n",
@@ -65,7 +56,7 @@
     "        incidence[t] = this_inc\n",
     "        suscept.append(this_suscept)\n",
     "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
-    "    return Outputs(incidence, suscept, r_t, process_vals)\n",
+    "    return Outputs(incidence, suscept, r_t)\n",
     "\n",
     "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
     "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
@@ -91,13 +82,14 @@
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
-    "    return semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
+    "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
+    "    return model_result, process_vals\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
     "    return sum([(incidence[t] - d) ** 2 for t, d in dummy_data.items()])"
    ]
   },
@@ -134,7 +126,8 @@
     "# Optimise and run results through the model\n",
     "param_bounds = [[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4\n",
     "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times), bounds=param_bounds)\n",
-    "optimised, suscept, r_t, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)"
+    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
+    "optimised, suscept, r_t = model_result"
    ]
   },
   {
