--- a/semimech/05optimise-all-params.ipynb
+++ b/semimech/05optimise-all-params.ipynb
@@ -85,12 +85,12 @@
     "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
     "    return model_result, process_vals\n",
     "\n",
-    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int) -> float:\n",
+    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in dummy_data.items()])"
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "source": [
     "# Optimise and run results through the model\n",
     "param_bounds = [[5.0, 6.0]] + [[1.5, 2.0]] + [[0.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times), bounds=param_bounds)\n",
+    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result"
    ]
