--- a/semimech/07test-opti.ipynb
+++ b/semimech/07test-opti.ipynb
@@ -81,7 +81,8 @@
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd)\n",
-    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
+    "    process_req_exp = np.exp(np.array(process_req))\n",
+    "    process_vals = get_interp_vals_over_model_time(process_req_exp, n_times)\n",
     "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
     "    return model_result, process_vals\n",
     "\n",
@@ -103,17 +104,7 @@
     "# Model parameters\n",
     "population = 100.0\n",
     "infectious_seed = 1.0\n",
-    "n_times = 40\n",
-    "dummy_data = pd.Series(\n",
-    "    {\n",
-    "        5: 1.0,\n",
-    "        10: 1.0,\n",
-    "        15: 1.5,\n",
-    "        25: 4.2,\n",
-    "        30: 3.8,\n",
-    "        35: 2.1,\n",
-    "    },\n",
-    ")"
+    "n_times = 40"
    ]
   },
   {
@@ -124,7 +115,7 @@
    "outputs": [],
    "source": [
     "model_times = pd.Series(range(n_times))\n",
-    "test_params = [5.5, 1.8, 2.0, 1.8, 2.2, 2.5]\n",
+    "test_params = [5.5, 1.8, 1.0, 0.5, 1.5, 0.8]\n",
     "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times)\n",
     "test_vals = {t: d for t, d in zip(model_times, test_data.incidence)}"
    ]
@@ -137,10 +128,21 @@
    "outputs": [],
    "source": [
     "# Optimise and run results through the model\n",
-    "param_bounds = [[2.0, 10.0]] + [[1.0, 4.0]] + [[0.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
+    "param_bounds = [[0.0, 10.0]] + [[0.0, 4.0]] + [[-10.0, 10.0]] * 4\n",
+    "result = minimize(calib_func, [5.0, 1.0] + [0.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11623a7f-f327-4f29-b41f-5eeae3b4a7e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(result.x[:2])\n",
+    "print(np.exp(np.array(result.x[2:])))"
    ]
   },
   {
