Nicer code for global optimisation with shgo implementation, despite shgo bug

--- a/semimech/07test-opti.ipynb
+++ b/semimech/07test-opti.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "from plotly import graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from scipy.optimize import minimize"
+    "from scipy.optimize import minimize, shgo"
    ]
   },
   {
@@ -127,9 +127,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimise and run results through the model\n",
+    "# Local optimisation with Nelder-Mead\n",
     "param_bounds = [[0.0, 10.0]] + [[0.0, 4.0]] + [[-10.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [5.0, 1.0] + [0.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
+    "result = minimize(calib_func, [5.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result"
    ]
@@ -148,7 +148,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c0d5b2a-253a-4af1-9056-e60de781a6e5",
+   "id": "857a7994-d700-4695-894c-9f20ab50257a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
+    "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
+    "param_bounds = [[0.1, 10.0]] + [[0.1, 4.0]] + [[-10.0, 10.0]] * 4\n",
+    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
+    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
+    "optimised, suscept, r_t = model_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23cab736-e084-4f07-a124-a6543da7b54b",
    "metadata": {},
    "outputs": [],
    "source": [
