Use parameters to show superior performance of global optimiser

--- a/semimech/07test-opti.ipynb
+++ b/semimech/07test-opti.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "# Local optimisation with Nelder-Mead\n",
     "param_bounds = [[0.0, 10.0]] + [[0.0, 4.0]] + [[-10.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [5.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
+    "result = minimize(calib_func, [2.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result"
    ]
@@ -158,6 +158,17 @@
     "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
     "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "472ca699-5df6-4b26-a55d-16a39f9cccf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(global_result.x[:2])\n",
+    "print(np.array(global_result.x[2:]))"
    ]
   },
   {
