Cleaner semimech loop with old code still in place

--- a/semimech/08truncate-generation_dist.ipynb
+++ b/semimech/08truncate-generation_dist.ipynb
@@ -53,27 +53,30 @@
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
     "    incidence = np.zeros(n_times)\n",
+    "    suscept = np.zeros(n_times)\n",
+    "    r_t = np.zeros(n_times)\n",
+    "\n",
     "    incidence[0] = seed\n",
-    "    this_suscept = pop - seed\n",
-    "    suscept = [this_suscept]\n",
-    "    r_t = [np.nan]\n",
+    "    suscept[0] = pop - seed\n",
+    "    r_t[0] = np.nan\n",
+    "    \n",
     "    for t in range(1, n_times):\n",
     "\n",
     "        # Update outputs\n",
     "        gen_times_interest = min(t, gen_times_end)\n",
     "        \n",
-    "        infect_contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Product of past incidence and their generation time densities\n",
-    "        infect_contribution_by_day = incidence[t-gen_times_interest:t] * gen_time_densities[:gen_times_interest][::-1]\n",
-    "\n",
+    "        # contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Old version\n",
+    "        contribution_by_day = incidence[t - gen_times_interest :t] * gen_time_densities[:gen_times_interest][::-1]  # Product of past incidence and their generation time densities\n",
     "        \n",
-    "        infect_modifier = process_vals[t] * this_suscept / pop  # Product of pre-specified process value and proportion susceptible        \n",
-    "        this_inc = infect_contribution_by_day.sum() * infect_modifier  # Incidence\n",
-    "        this_suscept = max(this_suscept - this_inc, 0.0)  # Zero out any small negative values\n",
+    "        infect_modifier = process_vals[t] * suscept[t - 1] / pop  # Pre-specified process by the proportion susceptible\n",
+    "        this_inc = contribution_by_day.sum() * infect_modifier  # Incidence\n",
+    "        this_suscept = max(suscept[t - 1] - this_inc, 0.0)  # Zero out any small negative susceptible values\n",
     "\n",
     "        # Track quantities of interest\n",
     "        incidence[t] = this_inc\n",
-    "        suscept.append(this_suscept)\n",
-    "        r_t.append(gen_time_densities[t-1::-1].sum() * infect_modifier)\n",
+    "        suscept[t] = this_suscept\n",
+    "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
+    "\n",
     "    return Outputs(incidence, suscept, r_t)\n",
     "\n",
     "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
