Add explanatory note to calculation of generation max outside of model function

--- a/semimech/08truncate-generation-dist.ipynb
+++ b/semimech/08truncate-generation-dist.ipynb
@@ -18,7 +18,9 @@
     "Possible next steps:\n",
     "- Allow for truncated generation time distribution\n",
     "- Make the random walk actually a walk\n",
-    "- Fit to actual data"
+    "- Fit to actual data\n",
+    "- Allow for time step other than one (possibly)\n",
+    "- Make plotting a function"
    ]
   },
   {
@@ -47,9 +49,7 @@
    "source": [
     "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t'])\n",
     "\n",
-    "gen_times_end = 20\n",
-    "\n",
-    "def semimech(gen_time_densities, process_vals, pop, seed, n_times) -> Outputs:\n",
+    "def semimech(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end) -> Outputs:\n",
     "    \"\"\"The semimechanistic process.\n",
     "    \"\"\"\n",
     "    incidence = np.zeros(n_times)\n",
@@ -62,17 +62,16 @@
     "    \n",
     "    for t in range(1, n_times):\n",
     "\n",
-    "        # Update outputs\n",
-    "        gen_times_interest = min(t, gen_times_end)\n",
-    "        \n",
-    "        # contribution_by_day = incidence[:t] * gen_time_densities[t-1::-1]  # Old version\n",
-    "        contribution_by_day = incidence[t - gen_times_interest :t] * gen_time_densities[:gen_times_interest][::-1]  # Product of past incidence and their generation time densities\n",
-    "        \n",
+    "        # Calculations\n",
+    "        gen_times_interest = min(t, gen_times_end)  # Number of generation times relevant to current loop\n",
+    "        inc_vals = incidence[t - gen_times_interest :t]  # Incidence series\n",
+    "        gen_vals = gen_time_densities[:gen_times_interest]  # Generation series\n",
+    "        contribution_by_day = inc_vals * gen_vals[::-1]  # Product of incidence values and reversed generation times\n",
     "        infect_modifier = process_vals[t] * suscept[t - 1] / pop  # Pre-specified process by the proportion susceptible\n",
-    "        this_inc = contribution_by_day.sum() * infect_modifier  # Incidence\n",
+    "        this_inc = contribution_by_day.sum() * infect_modifier  # Incidence for this time point\n",
     "        this_suscept = max(suscept[t - 1] - this_inc, 0.0)  # Zero out any small negative susceptible values\n",
     "\n",
-    "        # Track quantities of interest\n",
+    "        # Output tracking\n",
     "        incidence[t] = this_inc\n",
     "        suscept[t] = this_suscept\n",
     "        r_t[t] = gen_time_densities[t-1::-1].sum() * infect_modifier\n",
@@ -87,7 +86,7 @@
     "    a = req_mean / scale\n",
     "    return {'a': a, 'scale': scale}\n",
     "\n",
-    "def get_gamma_densities_from_params(mean: float, sd: float) -> np.array:\n",
+    "def get_gamma_densities_from_params(mean: float, sd: float, n_times: int) -> np.array:\n",
     "    \"\"\"Get integrals over integer differences in gamma distribution for simulation duration.\n",
     "    \"\"\"\n",
     "    params = get_gamma_params_from_mean_sd(mean, sd)\n",
@@ -98,20 +97,20 @@
     "    \"\"\"\n",
     "    return np.interp(range(n_times), np.linspace(0.0, n_times, len(req)), req)\n",
     "\n",
-    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
+    "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, gen_times_end: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
-    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd)\n",
+    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_req_exp = np.exp(np.array(process_req))\n",
     "    process_vals = get_interp_vals_over_model_time(process_req_exp, n_times)\n",
-    "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times)\n",
+    "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end)\n",
     "    return model_result, process_vals\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times)[0][0]\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, gen_times_end)[0][0]\n",
     "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
    ]
   },
@@ -125,7 +124,13 @@
     "# Model parameters\n",
     "population = 100.0\n",
     "infectious_seed = 1.0\n",
-    "n_times = 40"
+    "n_times = 40\n",
+    "max_gen_mean = 10.0\n",
+    "max_gen_sd = 4.0\n",
+    "# Calculate the longest distribution we could be interested in outside of the model function,\n",
+    "# otherwise if this is allowed to adapt to the distribution, things seem to go haywire\n",
+    "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
+    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)"
    ]
   },
   {
@@ -137,18 +142,8 @@
    "source": [
     "model_times = pd.Series(range(n_times))\n",
     "test_params = [5.5, 1.8, 1.0, 0.5, 1.5, 0.8]\n",
-    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times)\n",
+    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "test_vals = {t: d for t, d in zip(model_times, test_data.incidence)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d417c26-7b6b-46e7-b02a-4f26eef7be83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times)\n"
    ]
   },
   {
@@ -159,9 +154,9 @@
    "outputs": [],
    "source": [
     "# Local optimisation with Nelder-Mead\n",
-    "param_bounds = [[0.0, 10.0]] + [[0.0, 4.0]] + [[-10.0, 10.0]] * 4\n",
+    "param_bounds = [[0.0, max_gen_mean]] + [[0.0, max_gen_sd]] + [[-10.0, 10.0]] * 4\n",
     "result = minimize(calib_func, [2.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
-    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
+    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
    ]
   },
@@ -187,7 +182,7 @@
     "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
     "param_bounds = [[0.1, 30.0]] + [[0.1, 10.0]] + [[-10.0, 10.0]] * 4\n",
     "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
-    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
+    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
    ]
   },
