Make global versus local fair comparison with same bounds

--- a/semimech/08truncate-generation-dist.ipynb
+++ b/semimech/08truncate-generation-dist.ipynb
@@ -16,11 +16,9 @@
    "metadata": {},
    "source": [
     "Possible next steps:\n",
-    "- Allow for truncated generation time distribution\n",
     "- Make the random walk actually a walk\n",
     "- Fit to actual data\n",
-    "- Allow for time step other than one (possibly)\n",
-    "- Make plotting a function"
+    "- Allow for time step other than one (possibly)"
    ]
   },
   {
@@ -111,7 +109,19 @@
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, gen_times_end)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])\n",
+    "\n",
+    "def plot_output_fit(targets: Dict[int, float], result: Outputs, process_vals):\n",
+    "    \"\"\"Plot results from a fitting attempt against the target data and show estimated random process.\n",
+    "    \"\"\"\n",
+    "    fitted, suscept, r_t = result\n",
+    "    fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
+    "    fig.add_trace(go.Scatter(x=list(targets.keys()), y=list(targets.values()), mode='markers', name='targets'), row=1, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=fitted, name='model'), row=1, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
+    "    fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1)\n",
+    "    return fig.update_layout(height=800, margin={'t': 20, 'b': 5, 'l': 5, 'r': 5})"
    ]
   },
   {
@@ -154,7 +164,7 @@
    "outputs": [],
    "source": [
     "# Local optimisation with Nelder-Mead\n",
-    "param_bounds = [[0.0, max_gen_mean]] + [[0.0, max_gen_sd]] + [[-10.0, 10.0]] * 4\n",
+    "param_bounds = [[0.1, max_gen_mean]] + [[0.1, max_gen_sd]] + [[-10.0, 10.0]] * 4\n",
     "result = minimize(calib_func, [2.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
@@ -174,13 +184,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6a6da9b1-f399-4d0b-83b1-aad7c0c49c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_output_fit(test_vals, model_result, process_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "857a7994-d700-4695-894c-9f20ab50257a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
     "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
-    "param_bounds = [[0.1, 30.0]] + [[0.1, 10.0]] + [[-10.0, 10.0]] * 4\n",
     "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
     "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
@@ -200,17 +219,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23cab736-e084-4f07-a124-a6543da7b54b",
+   "id": "0ce02ad5-9bf2-44af-a974-794e895411b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot\n",
-    "fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
-    "fig.add_trace(go.Scatter(x=list(test_vals.keys()), y=list(test_vals.values()), mode='markers', name='targets'), row=1, col=1)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=optimised, name='model'), row=1, col=1)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
-    "fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1).update_layout(height=800, margin={'t': 20, 'b': 5, 'l': 5, 'r': 5})"
+    "plot_output_fit(test_vals, model_result, process_vals)"
    ]
   }
  ],
