--- a/semimech/08truncate-generation-dist.ipynb
+++ b/semimech/08truncate-generation-dist.ipynb
@@ -115,6 +115,7 @@
     "    \"\"\"Plot results from a fitting attempt against the target data and show estimated random process.\n",
     "    \"\"\"\n",
     "    fitted, suscept, r_t = result\n",
+    "    model_times = pd.Series(range(n_times))\n",
     "    fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
     "    fig.add_trace(go.Scatter(x=list(targets.keys()), y=list(targets.values()), mode='markers', name='targets'), row=1, col=1)\n",
     "    fig.add_trace(go.Scatter(x=model_times, y=fitted, name='model'), row=1, col=1)\n",
@@ -150,10 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_times = pd.Series(range(n_times))\n",
     "test_params = [5.5, 1.8, 1.0, 0.5, 1.5, 0.8]\n",
     "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "test_vals = {t: d for t, d in zip(model_times, test_data.incidence)}"
+    "test_vals = {t: d for t, d in zip(range(n_times), test_data.incidence)}"
    ]
   },
   {
